    out-of-memory errors and server crashes.
    Report by "JosefMachytkaNetApp".
  - Fix building on Windows with PostgreSQL versions older than v15.
    This used to report "unresolved external symbol XactReadOnly".
    Report by "w0pr".
  - Fix crash or empty result when reading larger CLOBs.
    Report by Rainer Hartwig and Erik van der Vlist.

  Enhancements:
  - Speed up IMPORT FOREIGN SCHEMA ... LIMIT TO (...) by filtering out tables
    whose name don't match on the Oracle side.
    Per suggestion from João Filipe Cavichiolo Storrer.
  - Add options "skip_tables", "skip_views" and "skip_matviews" to
    IMPORT FOREIGN SCHEMA.
    From a patch by Михаил.

Version 2.6.0, released 2023-09-08

  Note: This release will fail to build with minor releases below 13.10,
        14.7 and 15.2.  Other major versions are not affected.  oracle_fdw
        binaries built with later minor releases won't load with older
        PostgreSQL binaries, complaining about undefined symbols.
        Keep the PostgreSQL server updated!

  Bugfixes:
  - Inserting CLOBs with the server option "nchar" on can lead to the error
    "ORA-24806: LOB form mismatch".
    Report and patch by "jopoly".
  - Don't push down LIMIT with FOR SHARE or FOR UPDATE.  That caused the error
    ORA-02014: cannot select FOR UPDATE from view with DISTINCT, GROUP BY, etc.
    Reported by Marti Raudsepp.
  - Fix BEFORE UPDATE triggers.
    If a BEFORE UPDATE trigger modified a column that was not updated, the
    changed column was not propagated to Oracle.
    Report and diagnosis by "jopoly".
  - Don't free() strings in the environment.
    This could lead to crashes and unpredictable behavior.
  - Conversions from TIMESTAMP WITH LOCAL TIME ZONE to "timestamp without time
    zone" were incorrect.  To fix, set the Oracle session time zone from the
    PostgreSQL parameter "timezone".  Since not all time zones are accepted by
    all Oracle servers, this must be explicitly enabled by setting the